kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timelog-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timelog-production
      version: v1
  template:
    metadata:
      labels:
        app: timelog-production
        version: v1
    spec:
      containers:
        - name: timelog-production
          image: nightlord851108/timelog:master.f320057
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
