kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timelog
spec:
  type: ClusterIP
  selector:
    app: timelog
  ports:
  - name: http
    port: 80
